keep all chapters on server + load next chapter using ajax

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       </nav>
 
       <div class='chapter'>
-        <h1 class='title'></h2>
+        <h1 class='title'></h1>
         <p class='text'></p>
-        <h2>Your Choices:</h2>
+        <h2 class='choices-title'>Your Choices:</h2>
         <p class='choices'></p>
       </div>
 
