add footer + separator between chapter and choices

--- a/index.html
+++ b/index.html
@@ -36,10 +36,18 @@
       <div class='chapter'>
         <h1 class='title'></h1>
         <p class='text'></p>
+        <hr class='gradient'>
         <h2 class='choices-title'>Your Choices:</h2>
         <p class='choices'></p>
       </div>
 
+    </div>
+
+    <div id="footer">
+      <div class="container">
+        <hr>
+        <p class="text-muted center">&copy; Game Book 2015</p>
+      </div>
     </div>
   </body>
 </html>
