nav: make it possible to navigate different stories

--- a/index.html
+++ b/index.html
@@ -23,24 +23,25 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="#">Game Book</a>
+            <a class="navbar-brand" href="/">Game Book</a>
           </div>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-              <li><a href="/">Restart story</a></li>
+              <li><a href="/">Stories</a></li>
             </ul>
           </div>
         </div>
       </nav>
 
-      <div class='chapter'>
-        <h1 class='title'></h1>
-        <p class='text'></p>
-        <hr class='gradient'>
-        <h2 class='choices-title'>Your Choices:</h2>
-        <p class='choices'></p>
+      <div class='main'>
+        <div class='home'>
+          <h1>Choose your own adventure!</h1>
+          <ul>
+            <li><a href='#'>The Encounter</a></li>
+            <li><a href='#'>Open Space</a></li>
+          </ul>
+        </div>
       </div>
-
     </div>
 
     <div id="footer">
