app: encapsulate story-related code into a module

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- Latest compiled JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
+    <!-- App-specific JavaScript -->
     <script src="javascripts/app.js"></script>
 
     <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
