--- a/app/index.html
+++ b/app/index.html
@@ -16,10 +16,14 @@
     <!-- App-specific JavaScript -->
     <script src="javascripts/app.js"></script>
 
+    <!-- Firebase DB -->
+    <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
+
     <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
   </head>
 
   <body>
+
     <div class='container'>
       <nav class="navbar navbar-default">
         <div class="container-fluid">
