--- a/app/index.html
+++ b/app/index.html
@@ -4,25 +4,51 @@
     <meta charset="utf-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Latest compiled and minified CSS -->
+    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 
-    <!-- jQuery library -->
+    <!-- App-specific CSS -->
+    <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
+
+    <!-- jQuery (required by Bootstrap) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 
-    <!-- Latest compiled JavaScript -->
+    <!-- Bootstrap JavaScript -->
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-
-    <!-- App-specific JavaScript -->
-    <script src="javascripts/app.js"></script>
 
     <!-- Firebase DB -->
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/app.css">
+    <script src='//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js'></script>
+
+    <!-- AngularFire -->
+    <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+
+    <script src='/javascripts/angular/app.js'></script>
+    <script src='/javascripts/angular/directives/chapter.js'></script>
+          
+
+    <script type="text/javascript">
+      function addScript( src ) {
+        var s = document.createElement('script');
+        s.setAttribute('src', src);
+        s.setAttribute('type', 'text/javascript');
+        document.head.appendChild( s );
+      }
+      function getCookie(cname) {
+        var name = cname + "=";
+        var ca = document.cookie.split(';');
+        for(var i=0; i<ca.length; i++) {
+          var c = ca[i];
+          while (c.charAt(0)==' ') c = c.substring(1);
+          if (c.indexOf(name) == 0) return c.substring(name.length,c.length);
+        }
+        return "";
+      }
+    </script>
   </head>
 
-  <body>
+  <body ng-app='gameBook'>
 
     <div class='container'>
       <nav class="navbar navbar-default">
@@ -33,6 +59,7 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a href="/">Stories</a></li>
+              <li><a id='angular' href="/">Angular</a></li>
             </ul>
           </div>
         </div>
@@ -55,5 +82,24 @@
         <p class="text-muted center">&copy; Game Book 2015</p>
       </div>
     </div>
+
+    <script type="text/javascript">
+      if( getCookie('implementation') == 'Angular' ){
+        $(function(){
+          var el = document.createElement('div');
+          el.setAttribute('ng-include', "'index-angular.html'");
+          el.setAttribute('id', 'dynamic-chapter-container');
+          $('.main').replaceWith(el);
+          angular.element('#dynamic-chapter-container').injector().invoke(['$compile', function ($compile) {
+            var $scope = angular.element(el).scope();
+            $compile(el)($scope);
+            $scope.$apply();
+          }]);
+        });
+      }else{
+        addScript('javascripts/plain/app.js');
+      }
+    </script>
+
   </body>
 </html>
