--- a/app/index.html
+++ b/app/index.html
@@ -59,7 +59,14 @@
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
               <li><a href="/">Stories</a></li>
-              <li><a id='angular' href="/">Angular</a></li>
+              <li class="dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Implementation
+                  <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li class='menu-item-plain-js'><a class='plain-js' href="#">Plain JS</a></li>
+                  <li class='menu-item-angular-js'><a class='angular-js' href="#">Angular JS</a></li>
+                </ul>
+              </li>
             </ul>
           </div>
         </div>
@@ -86,9 +93,33 @@
     </div>
 
     <script type="text/javascript">
-      if( getCookie('implementation') == 'Angular' ){
+      $(function(){
+        $('.dropdown').on('click', '.plain-js', function(el){
+          activatePlainJS();
+          location.reload();
+        });
+        $('.dropdown').on('click', '.angular-js', function(el){
+          activateAngularJS();
+          location.reload();
+        });
+      });
 
-        $(function(){
+      function activatePlainJS(){
+        $('.menu-item-plain-js').addClass('active');
+        $('.menu-item-angular-js').removeClass('active');
+        document.cookie="implementation=PlainJS";
+      }
+
+      function activateAngularJS(){
+        $('.menu-item-plain-js').removeClass('active');
+        $('.menu-item-angular-js').addClass('active');
+        document.cookie="implementation=AngularJS";
+      }
+
+      $(function(){
+        if( getCookie('implementation') == 'AngularJS' ){
+          activateAngularJS();
+
           // load a new story upon user selection
           $('.main').on('click', '.home a', function(el){
             var story_title = $(el.target).text().toLowerCase().replace(' ', '-');
@@ -104,10 +135,11 @@
               $scope.$apply();
             }]);
           });
-        });
-      }else{
-        addScript('javascripts/plain/app.js');
-      }
+        }else{
+          activatePlainJS();
+          addScript('javascripts/plain/app.js');
+        }
+      });
     </script>
 
   </body>
