angular: enforce camel case

--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,8 @@
         }
         document.head.appendChild( s );
       }
-      function getCookie(cname) {
-        var name = cname + "=";
+      function getCookie(cookie_name) {
+        var name = cookie_name + "=";
         var ca = document.cookie.split(';');
         for(var i=0; i<ca.length; i++) {
           var c = ca[i];
