--- a/app/index.html
+++ b/app/index.html
@@ -19,15 +19,17 @@
     <!-- Firebase DB -->
     <script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 
+    <script src="/javascripts/lib/async.min.js"></script>
+
     <script>
-      function addScript( src, callback ) {
+      function addScript(src, callback) {
         var s = document.createElement('script');
         s.setAttribute('src', src);
         s.setAttribute('type', 'text/javascript');
         s.onload = function(){
-          callback();
+          callback(null);
         }
-        document.head.appendChild( s );
+        document.head.appendChild(s);
       }
 
       function getCookie(cookie_name) {
@@ -125,61 +127,54 @@
       }
 
       function loadAngularScripts(){
-        // todo: load Angular scripts dynamically and synchronously
-        addScript('http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js', function(){
-          addScript("https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js", function(){
-            addScript('/javascripts/angular/directives/chapter.js', function(){
-              addScript('/javascripts/angular/app.js', function(){
-                angular.bootstrap($('#app-container'), ['gameBook']);
+        // todo: load Angular scripts dynamically, sequentially, and synchronously
+        async.waterfall([
+          async.apply(addScript, 'http://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.js'),
+          async.apply(addScript, 'https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js'),
+          async.apply(addScript, '/javascripts/angular/directives/chapter.js'),
+          async.apply(addScript, '/javascripts/angular/app.js')], function(err, result){
+            angular.bootstrap($('#app-container'), ['gameBook']);
 
-                  // load a new story upon user selection
-                  $('.main').on('click', '.home a', function(el){
-                    var story_title = $(el.target).text().toLowerCase().replace(' ', '-');
+            // load a new story upon user selection
+            $('.main').on('click', '.home a', function(el){
+              var story_title = $(el.target).text().toLowerCase().replace(' ', '-');
 
-                    var el = document.createElement('div');
-                    el.setAttribute('ng-include', "'templates/angular/chapter-container.html'");
-                    el.setAttribute('id', 'dynamic-chapter-container');
-                    $('.main').replaceWith(el);
-                    angular.element('#dynamic-chapter-container').injector().invoke(['$compile', function ($compile) {
-                      var $scope = angular.element(el).scope();
-                      $compile(el)($scope);
-                      $scope.$apply();
-                    }]);
-                });
-              });
+              var el = document.createElement('div');
+              el.setAttribute('ng-include', "'templates/angular/chapter-container.html'");
+              el.setAttribute('id', 'dynamic-chapter-container');
+              $('.main').replaceWith(el);
+              angular.element('#dynamic-chapter-container').injector().invoke(['$compile', function ($compile) {
+                var $scope = angular.element(el).scope();
+                $compile(el)($scope);
+                $scope.$apply();
+              }]);
             });
           });
-        });
       }
 
       function loadReactScripts(){
-        addScript("https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js", function(){
-          addScript("https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js", function(){
-            addScript("https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js", function(){
-              addScript("https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js", function(){
-                addScript("/javascripts/react/story.js", function(){
-                  addScript("/javascripts/react/chapter.js", function(){
-                    addScript("/javascripts/react/show_hide.js", function(){
+        async.waterfall([
+          async.apply(addScript, 'https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react.js'),
+          async.apply(addScript, 'https://cdnjs.cloudflare.com/ajax/libs/react/0.14.6/react-dom.js'),
+          async.apply(addScript, 'https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.23/browser.min.js'),
+          async.apply(addScript, 'https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js'),
+          async.apply(addScript, '/javascripts/react/story.js'),
+          async.apply(addScript, '/javascripts/react/chapter.js'),
+          async.apply(addScript, '/javascripts/react/show_hide.js')], function(err, results){
 
-                    // load a new story upon user selection
-                    $('.main').on('click', '.home a', function(el){
-                      var storyTitle = $(el.target).text().toLowerCase().replace(' ', '-');
+            // load a new story upon user selection
+            $('.main').on('click', '.home a', function(el){
+              var storyTitle = $(el.target).text().toLowerCase().replace(' ', '-');
 
-                      // React code
-                      ReactDOM.render(
-                          React.createElement(Story, {titleUrlSegment: storyTitle}),
-                        document.getElementById('app-container')
-                      );
-                      // end of React code
+              // React code
+              ReactDOM.render(
+                  React.createElement(Story, {titleUrlSegment: storyTitle}),
+                  document.getElementById('app-container')
+                  );
+              // end of React code
 
-                      });
-                    });
-                  });
-                });
-              });
             });
           });
-        });
       }
 
       $(function(){
